--- a/src/html/res/css/style.css
+++ b/src/html/res/css/style.css
@@ -26,6 +26,11 @@ a:hover {
 	text-decoration: underline;
 }
 
+hr {
+	width: 50%;
+	opacity: 0.5;
+}
+
 ul {
 	padding-left: 20px;
 }
@@ -98,17 +103,18 @@ div.nav div.navLinks {
 
 div.results {
 	width: 900px;
-	height: calc(var(--noiseHeight) + 100px);
+	height: calc(var(--noiseHeight) + 120px);
 	margin: 1% auto 0 auto;
 }
 
 div.results.singleColumn {
-	height: calc(1030px + 100px) !important;
+	float: none;
+	height: auto;
 }
 
 div.results.singleColumn div.resultsExplanation {
-	height: calc(1030px + 3px) !important;
-	float: none;
+	float: none !important;
+	height: auto;
 	width: 855px;
 }
 
@@ -142,7 +148,7 @@ div.arrows {
 
 div.arrows svg {
 	margin-top: 40px;
-	height: calc(var(--noiseHeight) - 40px);
+	height: calc(var(--noiseHeight) - 24px);
 }
 
 div.arrows svg line {
@@ -246,17 +252,12 @@ div.arrows svg text.ellipsis {
 div.resultsExplanation {
 	float: right;
 	width: 500px;
-	height: calc(var(--noiseHeight) + 3px);
+	height: calc(var(--noiseHeight) + 100px);
 	background-color: #FFFCFC;
-	padding: 0 20px 100px 20px;
+	padding: 0 20px 20px 20px;
 	border-radius: 5px;
 	border: 2px solid #FFF5F5;
 	text-align: justify;
-}
-
-div.resultsExplanation h3 {
-	margin-bottom: 10px;
-	padding-bottom: 0;
 }
 
 div.resultsExplanation p {
@@ -381,8 +382,10 @@ div.footer span.about {
 
 a.patternEntry {
 	display: inline-block;
+	vertical-align: middle;
 	white-space: pre;
 	border: 3px solid var(--noiseClearGray);
+	background-clip: padding-box;
 	border-radius: 5px;
 	color: var(--noiseTextColor);
 	background: #FFF;
@@ -392,8 +395,8 @@ a.patternEntry {
 	height: 200px;
 	margin: 10px 30px;
 	text-align: left;
-	float: left;
 	font-family: 'IBM Plex Mono', monospace;
+	line-height: normal;
 }
 
 a.patternEntry:hover {
