--- a/src/html/res/css/style.css
+++ b/src/html/res/css/style.css
@@ -455,6 +455,7 @@ pre {
 	padding: 20px;
 	border-radius: 5px;
 	font-family: 'IBM Plex Mono', monospace;
+	white-space: pre-line;
 }
 
 div.footer {
